fixed images on smaller screen

--- a/src/app/book/bookdetail/bookdetail.component.css
+++ b/src/app/book/bookdetail/bookdetail.component.css
@@ -36,6 +36,9 @@
     .card{
         margin:auto;
     }
+    .card > img{
+        height:250px
+      }
     
   }
   
